SERVER-19935 Make JSThread stacks more informative

We have some pretty poor error reporting for interrupted $where's and
map reduces. This fixes the interruption bit and accumulates stack's
across threads.