src/mongo/scripting/mozjs/error.h
@@ -28,53 +28,22 @@
 
 #pragma once
 
-#include <jsapi.h>
-
-#include "mongo/base/error_codes.h"
-#include "mongo/base/string_data.h"
-#include "mongo/util/assert_util.h"
+#include "mongo/scripting/mozjs/wraptype.h"
 
 namespace mongo {
 namespace mozjs {
 
 /**
- * Turns a current C++ exception into a JS exception
- */
-void mongoToJSException(JSContext* cx);
-
-/**
- * Sets an exception for javascript
- */
-void setJSException(JSContext* cx, ErrorCodes::Error code, StringData sd);
-
-/**
- * Converts the current pending js expection into a status
+ * The "Error" Javascript object.
  *
- * The altCode and altReason are used if no JS exception is pending
+ * Note that this installs over native.  We only use this to grab the error
+ * prototype early in case users overwrite it.
  */
-Status currentJSExceptionToStatus(JSContext* cx, ErrorCodes::Error altCode, StringData altReason);
+struct ErrorInfo : public BaseInfo {
+    static const char* const className;
 
-/**
- * Converts a JSErrorReport to status
- */
-Status JSErrorReportToStatus(JSContext* cx,
-                             JSErrorReport* report,
-                             ErrorCodes::Error altCode,
-                             StringData altReason);
-
-/**
- * Returns the current stack as a string
- */
-std::string currentJSStackToString(JSContext* cx);
-
-/**
- * Turns the current JS exception into a C++ exception
- *
- * The altCode and altReason are used if no JS exception is pending
- */
-MONGO_COMPILER_NORETURN void throwCurrentJSException(JSContext* cx,
-                                                     ErrorCodes::Error altCode,
-                                                     StringData altReason);
+    static const InstallType installType = InstallType::OverNative;
+};
 
 }  // namespace mozjs
 }  // namespace mongo
